Fix secondary colors

--- a/tachyons.css
+++ b/tachyons.css
@@ -31,9 +31,9 @@
 .bg-primary { background-color: #4b71fc; }
 .bg-dark-primary { background-color: #3d5cce; }
 .bg-active-primary { background-color: #2b4191; }
-.bg-secondary { background-color: 942227; }
+.bg-secondary { background-color: #545a70; }
 .bg-dark-secondary { background-color: #363a48; }
-.bg-active-secondary { background-color: #363a48; }
+.bg-active-secondary { background-color: #15161c; }
 .bg-success { background-color: #7ed321; }
 .bg-light-success { background-color: #f8fdf4; }
 .bg-danger { background-color: #ff3d44; }
@@ -76,9 +76,9 @@
 .b--primary { border-color: #4b71fc; }
 .b--dark-primary { border-color: #3d5cce; }
 .b--active-primary { border-color: #2b4191; }
-.b--secondary { border-color: 942227; }
+.b--secondary { border-color: #545a70; }
 .b--dark-secondary { border-color: #363a48; }
-.b--active-secondary { border-color: #363a48; }
+.b--active-secondary { border-color: #15161c; }
 .b--success { border-color: #7ed321; }
 .b--light-success { border-color: #f8fdf4; }
 .b--danger { border-color: #ff3d44; }
@@ -124,9 +124,9 @@
 .c-primary { color: #4b71fc; }
 .c-dark-primary { color: #3d5cce; }
 .c-active-primary { color: #2b4191; }
-.c-secondary { color: 942227; }
+.c-secondary { color: #545a70; }
 .c-dark-secondary { color: #363a48; }
-.c-active-secondary { color: #363a48; }
+.c-active-secondary { color: #15161c; }
 .c-success { color: #7ed321; }
 .c-light-success { color: #f8fdf4; }
 .c-danger { color: #ff3d44; }
@@ -609,9 +609,9 @@
 .bg-primary { background-color: #4b71fc; }
 .bg-dark-primary { background-color: #3d5cce; }
 .bg-active-primary { background-color: #2b4191; }
-.bg-secondary { background-color: 942227; }
+.bg-secondary { background-color: #545a70; }
 .bg-dark-secondary { background-color: #363a48; }
-.bg-active-secondary { background-color: #363a48; }
+.bg-active-secondary { background-color: #15161c; }
 .bg-success { background-color: #7ed321; }
 .bg-light-success { background-color: #f8fdf4; }
 .bg-danger { background-color: #ff3d44; }
@@ -654,9 +654,9 @@
 .c-primary { color: #4b71fc; }
 .c-dark-primary { color: #3d5cce; }
 .c-active-primary { color: #2b4191; }
-.c-secondary { color: 942227; }
+.c-secondary { color: #545a70; }
 .c-dark-secondary { color: #363a48; }
-.c-active-secondary { color: #363a48; }
+.c-active-secondary { color: #15161c; }
 .c-success { color: #7ed321; }
 .c-light-success { color: #f8fdf4; }
 .c-danger { color: #ff3d44; }
@@ -744,24 +744,24 @@
 .hover-bg-active-primary:hover { background-color: #2b4191; }
 .hover-b--active-primary:focus { border-color: #2b4191; }
 .hover-b--active-primary:hover { border-color: #2b4191; }
-.hover-c-secondary:focus { color: 942227; }
-.hover-c-secondary:hover { color: 942227; }
-.hover-bg-secondary:focus { background-color: 942227; }
-.hover-bg-secondary:hover { background-color: 942227; }
-.hover-b--secondary:focus { border-color: 942227; }
-.hover-b--secondary:hover { border-color: 942227; }
+.hover-c-secondary:focus { color: #545a70; }
+.hover-c-secondary:hover { color: #545a70; }
+.hover-bg-secondary:focus { background-color: #545a70; }
+.hover-bg-secondary:hover { background-color: #545a70; }
+.hover-b--secondary:focus { border-color: #545a70; }
+.hover-b--secondary:hover { border-color: #545a70; }
 .hover-c-dark-secondary:focus { color: #363a48; }
 .hover-c-dark-secondary:hover { color: #363a48; }
 .hover-bg-dark-secondary:focus { background-color: #363a48; }
 .hover-bg-dark-secondary:hover { background-color: #363a48; }
 .hover-b--dark-secondary:focus { border-color: #363a48; }
 .hover-b--dark-secondary:hover { border-color: #363a48; }
-.hover-c-active-secondary:focus { color: #363a48; }
-.hover-c-active-secondary:hover { color: #363a48; }
-.hover-bg-active-secondary:focus { background-color: #363a48; }
-.hover-bg-active-secondary:hover { background-color: #363a48; }
-.hover-b--active-secondary:focus { border-color: #363a48; }
-.hover-b--active-secondary:hover { border-color: #363a48; }
+.hover-c-active-secondary:focus { color: #15161c; }
+.hover-c-active-secondary:hover { color: #15161c; }
+.hover-bg-active-secondary:focus { background-color: #15161c; }
+.hover-bg-active-secondary:hover { background-color: #15161c; }
+.hover-b--active-secondary:focus { border-color: #15161c; }
+.hover-b--active-secondary:hover { border-color: #15161c; }
 .hover-c-success:focus { color: #7ed321; }
 .hover-c-success:hover { color: #7ed321; }
 .hover-bg-success:focus { background-color: #7ed321; }
@@ -1163,9 +1163,9 @@
 .c-primary { color: #4b71fc; }
 .c-dark-primary { color: #3d5cce; }
 .c-active-primary { color: #2b4191; }
-.c-secondary { color: 942227; }
+.c-secondary { color: #545a70; }
 .c-dark-secondary { color: #363a48; }
-.c-active-secondary { color: #363a48; }
+.c-active-secondary { color: #15161c; }
 .c-success { color: #7ed321; }
 .c-light-success { color: #f8fdf4; }
 .c-danger { color: #ff3d44; }
