Add info colors

--- a/src/_colors.css
+++ b/src/_colors.css
@@ -12,6 +12,7 @@
 --secondary: #545A70;
 --dark-secondary: #363A48;
 --active-secondary: #15161C;
+--info: #4B71FC;
 --success: #7ED321;
 --light-success: #F8FDF4;
 --danger: #FF3D44;
