Add light-info color

--- a/src/_colors.css
+++ b/src/_colors.css
@@ -13,6 +13,7 @@
 --dark-secondary: #363A48;
 --active-secondary: #15161C;
 --info: #4B71FC;
+--light-info: #F0F1F4;
 --success: #7ED321;
 --light-success: #F8FDF4;
 --danger: #FF3D44;
