--- a/tachyons.css
+++ b/tachyons.css
@@ -35,6 +35,7 @@
 .bg-dark-secondary { background-color: #363a48; }
 .bg-active-secondary { background-color: #15161c; }
 .bg-info { background-color: #4b71fc; }
+.bg-light-info { background-color: #f0f1f4; }
 .bg-success { background-color: #7ed321; }
 .bg-light-success { background-color: #f8fdf4; }
 .bg-danger { background-color: #ff3d44; }
@@ -81,6 +82,7 @@
 .b--dark-secondary { border-color: #363a48; }
 .b--active-secondary { border-color: #15161c; }
 .b--info { border-color: #4b71fc; }
+.b--light-info { border-color: #f0f1f4; }
 .b--success { border-color: #7ed321; }
 .b--light-success { border-color: #f8fdf4; }
 .b--danger { border-color: #ff3d44; }
@@ -130,6 +132,7 @@
 .c-dark-secondary { color: #363a48; }
 .c-active-secondary { color: #15161c; }
 .c-info { color: #4b71fc; }
+.c-light-info { color: #f0f1f4; }
 .c-success { color: #7ed321; }
 .c-light-success { color: #f8fdf4; }
 .c-danger { color: #ff3d44; }
@@ -616,6 +619,7 @@
 .bg-dark-secondary { background-color: #363a48; }
 .bg-active-secondary { background-color: #15161c; }
 .bg-info { background-color: #4b71fc; }
+.bg-light-info { background-color: #f0f1f4; }
 .bg-success { background-color: #7ed321; }
 .bg-light-success { background-color: #f8fdf4; }
 .bg-danger { background-color: #ff3d44; }
@@ -662,6 +666,7 @@
 .c-dark-secondary { color: #363a48; }
 .c-active-secondary { color: #15161c; }
 .c-info { color: #4b71fc; }
+.c-light-info { color: #f0f1f4; }
 .c-success { color: #7ed321; }
 .c-light-success { color: #f8fdf4; }
 .c-danger { color: #ff3d44; }
@@ -773,6 +778,12 @@
 .hover-bg-info:hover { background-color: #4b71fc; }
 .hover-b--info:focus { border-color: #4b71fc; }
 .hover-b--info:hover { border-color: #4b71fc; }
+.hover-c-light-info:focus { color: #f0f1f4; }
+.hover-c-light-info:hover { color: #f0f1f4; }
+.hover-bg-light-info:focus { background-color: #f0f1f4; }
+.hover-bg-light-info:hover { background-color: #f0f1f4; }
+.hover-b--light-info:focus { border-color: #f0f1f4; }
+.hover-b--light-info:hover { border-color: #f0f1f4; }
 .hover-c-success:focus { color: #7ed321; }
 .hover-c-success:hover { color: #7ed321; }
 .hover-bg-success:focus { background-color: #7ed321; }
@@ -1178,6 +1189,7 @@
 .c-dark-secondary { color: #363a48; }
 .c-active-secondary { color: #15161c; }
 .c-info { color: #4b71fc; }
+.c-light-info { color: #f0f1f4; }
 .c-success { color: #7ed321; }
 .c-light-success { color: #f8fdf4; }
 .c-danger { color: #ff3d44; }
