Update for brand colors

--- a/src/_widths.css
+++ b/src/_widths.css
@@ -25,6 +25,7 @@
     15 = 15th step in width scale
 
     -10  = literal value 10%
+    -15  = literal value 15%
     -20  = literal value 20%
     -25  = literal value 25%
     -30  = literal value 30%
@@ -36,6 +37,7 @@
     -70  = literal value 70%
     -75  = literal value 75%
     -80  = literal value 80%
+    -85  = literal value 85%
     -90  = literal value 90%
     -100 = literal value 100%
 
@@ -67,6 +69,8 @@
 .g-w13 { width: 5rem; }
 .g-w14 { width: 8rem; }
 .g-w15 { width: 16rem; }
+.w-15 {  width:  15%; }
+.w-85 {  width:  85%; }
 
 					@media screen and (min-width: 36em) and (max-width: 48em) {
 						.g-w1-xs { width: 0.25rem; }
@@ -84,6 +88,8 @@
 .g-w13-xs { width: 5rem; }
 .g-w14-xs { width: 8rem; }
 .g-w15-xs { width: 16rem; }
+.w-15-xs {  width:  15%; }
+.w-85-xs {  width:  85%; }
 					}
 				
 
@@ -103,6 +109,8 @@
 .g-w13-s { width: 5rem; }
 .g-w14-s { width: 8rem; }
 .g-w15-s { width: 16rem; }
+.w-15-s {  width:  15%; }
+.w-85-s {  width:  85%; }
 					}
 				
 
@@ -122,6 +130,8 @@
 .g-w13-m { width: 5rem; }
 .g-w14-m { width: 8rem; }
 .g-w15-m { width: 16rem; }
+.w-15-m {  width:  15%; }
+.w-85-m {  width:  85%; }
 					}
 				
 
@@ -141,6 +151,8 @@
 .g-w13-l { width: 5rem; }
 .g-w14-l { width: 8rem; }
 .g-w15-l { width: 16rem; }
+.w-15-l {  width:  15%; }
+.w-85-l {  width:  85%; }
 					}
 				
 
@@ -160,5 +172,7 @@
 .g-w13-xl { width: 5rem; }
 .g-w14-xl { width: 8rem; }
 .g-w15-xl { width: 16rem; }
+.w-15-xl {  width:  15%; }
+.w-85-xl {  width:  85%; }
 					}
 				
