--- a/src/_colors.css
+++ b/src/_colors.css
@@ -4,34 +4,34 @@
 --base-2: #F9FAFC;
 --base-3: #EDEFF2;
 --base-4: #E1E4E7;
---base-inverted-1: #545A70;
+--base-inverted-1: #1F5262;
 --base-inverted-2: #7F8494;
 --base-inverted-3: #A9ACB7;
 --base-inverted-4: #F6F7F8;
---primary-light: #F6F8FF;
---primary: #4B71FC;
---primary-dark: #3855BD;
---primary-bold: #2D4497;
---success-light: #F8FDF4;
---success: #7ED321;
---success-dark: #5F9E19;
---success-bold: #395F0F;
---danger-light: #FFF5F5;
---danger: #FF3D44;
---danger-dark: #BF2E33;
---danger-bold: #801F22;
---warning-light: #FFFAF4;
---warning: #FFA721;
---warning-dark: #BF7D19;
---warning-bold: #805411;
+--primary-light: #F6FCFE;
+--primary: #3DA3C3;
+--primary-dark: #2E7A92;
+--primary-bold: #1F5262;
+--success-light: #F7FCF8;
+--success: #5FCE77;
+--success-dark: #479B59;
+--success-bold: #30673C;
+--danger-light: #FEF3F5;
+--danger: #F71940;
+--danger-dark: #B91330;
+--danger-bold: #7C0D20;
+--warning-light: #FFFBF6;
+--warning: #FFBA57;
+--warning-dark: #BF8C41;
+--warning-bold: #805D2C;
 --on-primary: #FFFFFF;
 --on-success: #FFFFFF;
 --on-danger: #FFFFFF;
 --on-warning: #FFFFFF;
 --on-inverted: #FFFFFF;
 --on-base-3: #CCD1D6;
---on-base-2: #A2A7BA;
---on-base: #545A70;
+--on-base-2: #8BA3AA;
+--on-base: #1F5262;
 --black: #000000;
 --white: #ffffff;
 --black-20: rgba(0,0,0,.20);
@@ -45,20 +45,5 @@
 --white-80: rgba(255,255,255,.80);
 --white-90: rgba(255,255,255,.90);
 --transparent: transparent;
---dark-primary: #3D5CCE;
---active-primary: #2B4191;
---secondary: #545A70;
---dark-secondary: #363A48;
---active-secondary: #15161C;
---info: #4B71FC;
---light-info: #F0F1F4;
---light-success: #F8FDF4;
---dark-danger: #D03238;
---active-danger: #942227;
---light-danger: #FFF5F5;
---light-warning: #FFFAF4;
---outline: #FFFFFF;
---dark-outline: #F0F1F4;
---active-outline: #E7E9F0;
 
 }
