--- a/tachyons.css
+++ b/tachyons.css
@@ -26,14 +26,14 @@
 .bg-base-2 { background-color: #f9fafc; }
 .bg-base-3 { background-color: #edeff2; }
 .bg-base-4 { background-color: #e1e4e7; }
-.bg-base-inverted-1 { background-color: #1f5262; }
+.bg-base-inverted-1 { background-color: #14282e; }
 .bg-base-inverted-2 { background-color: #7f8494; }
 .bg-base-inverted-3 { background-color: #a9acb7; }
 .bg-base-inverted-4 { background-color: #f6f7f8; }
 .bg-primary-light { background-color: #f6fcfe; }
 .bg-primary { background-color: #3da3c3; }
 .bg-primary-dark { background-color: #2e7a92; }
-.bg-primary-bold { background-color: #1f5262; }
+.bg-primary-bold { background-color: #14282e; }
 .bg-success-light { background-color: #f7fcf8; }
 .bg-success { background-color: #5fce77; }
 .bg-success-dark { background-color: #479b59; }
@@ -53,7 +53,7 @@
 .bg-on-inverted { background-color: #fff; }
 .bg-on-base-3 { background-color: #ccd1d6; }
 .bg-on-base-2 { background-color: #8ba3aa; }
-.bg-on-base { background-color: #1f5262; }
+.bg-on-base { background-color: #14282e; }
 .bg-black { background-color: #000; }
 .bg-white { background-color: #fff; }
 .bg-black-20 { background-color: rgba( 0, 0, 0, .20 ); }
@@ -71,14 +71,14 @@
 .b--base-2 { border-color: #f9fafc; }
 .b--base-3 { border-color: #edeff2; }
 .b--base-4 { border-color: #e1e4e7; }
-.b--base-inverted-1 { border-color: #1f5262; }
+.b--base-inverted-1 { border-color: #14282e; }
 .b--base-inverted-2 { border-color: #7f8494; }
 .b--base-inverted-3 { border-color: #a9acb7; }
 .b--base-inverted-4 { border-color: #f6f7f8; }
 .b--primary-light { border-color: #f6fcfe; }
 .b--primary { border-color: #3da3c3; }
 .b--primary-dark { border-color: #2e7a92; }
-.b--primary-bold { border-color: #1f5262; }
+.b--primary-bold { border-color: #14282e; }
 .b--success-light { border-color: #f7fcf8; }
 .b--success { border-color: #5fce77; }
 .b--success-dark { border-color: #479b59; }
@@ -98,7 +98,7 @@
 .b--on-inverted { border-color: #fff; }
 .b--on-base-3 { border-color: #ccd1d6; }
 .b--on-base-2 { border-color: #8ba3aa; }
-.b--on-base { border-color: #1f5262; }
+.b--on-base { border-color: #14282e; }
 .b--black { border-color: #000; }
 .b--white { border-color: #fff; }
 .b--black-20 { border-color: rgba( 0, 0, 0, .20 ); }
@@ -119,14 +119,14 @@
 .c-base-2 { color: #f9fafc; }
 .c-base-3 { color: #edeff2; }
 .c-base-4 { color: #e1e4e7; }
-.c-base-inverted-1 { color: #1f5262; }
+.c-base-inverted-1 { color: #14282e; }
 .c-base-inverted-2 { color: #7f8494; }
 .c-base-inverted-3 { color: #a9acb7; }
 .c-base-inverted-4 { color: #f6f7f8; }
 .c-primary-light { color: #f6fcfe; }
 .c-primary { color: #3da3c3; }
 .c-primary-dark { color: #2e7a92; }
-.c-primary-bold { color: #1f5262; }
+.c-primary-bold { color: #14282e; }
 .c-success-light { color: #f7fcf8; }
 .c-success { color: #5fce77; }
 .c-success-dark { color: #479b59; }
@@ -146,7 +146,7 @@
 .c-on-inverted { color: #fff; }
 .c-on-base-3 { color: #ccd1d6; }
 .c-on-base-2 { color: #8ba3aa; }
-.c-on-base { color: #1f5262; }
+.c-on-base { color: #14282e; }
 .c-black { color: #000; }
 .c-white { color: #fff; }
 .c-black-20 { color: rgba( 0, 0, 0, .20 ); }
@@ -604,14 +604,14 @@
 .bg-base-2 { background-color: #f9fafc; }
 .bg-base-3 { background-color: #edeff2; }
 .bg-base-4 { background-color: #e1e4e7; }
-.bg-base-inverted-1 { background-color: #1f5262; }
+.bg-base-inverted-1 { background-color: #14282e; }
 .bg-base-inverted-2 { background-color: #7f8494; }
 .bg-base-inverted-3 { background-color: #a9acb7; }
 .bg-base-inverted-4 { background-color: #f6f7f8; }
 .bg-primary-light { background-color: #f6fcfe; }
 .bg-primary { background-color: #3da3c3; }
 .bg-primary-dark { background-color: #2e7a92; }
-.bg-primary-bold { background-color: #1f5262; }
+.bg-primary-bold { background-color: #14282e; }
 .bg-success-light { background-color: #f7fcf8; }
 .bg-success { background-color: #5fce77; }
 .bg-success-dark { background-color: #479b59; }
@@ -631,7 +631,7 @@
 .bg-on-inverted { background-color: #fff; }
 .bg-on-base-3 { background-color: #ccd1d6; }
 .bg-on-base-2 { background-color: #8ba3aa; }
-.bg-on-base { background-color: #1f5262; }
+.bg-on-base { background-color: #14282e; }
 .bg-black { background-color: #000; }
 .bg-white { background-color: #fff; }
 .bg-black-20 { background-color: rgba( 0, 0, 0, .20 ); }
@@ -649,14 +649,14 @@
 .c-base-2 { color: #f9fafc; }
 .c-base-3 { color: #edeff2; }
 .c-base-4 { color: #e1e4e7; }
-.c-base-inverted-1 { color: #1f5262; }
+.c-base-inverted-1 { color: #14282e; }
 .c-base-inverted-2 { color: #7f8494; }
 .c-base-inverted-3 { color: #a9acb7; }
 .c-base-inverted-4 { color: #f6f7f8; }
 .c-primary-light { color: #f6fcfe; }
 .c-primary { color: #3da3c3; }
 .c-primary-dark { color: #2e7a92; }
-.c-primary-bold { color: #1f5262; }
+.c-primary-bold { color: #14282e; }
 .c-success-light { color: #f7fcf8; }
 .c-success { color: #5fce77; }
 .c-success-dark { color: #479b59; }
@@ -676,7 +676,7 @@
 .c-on-inverted { color: #fff; }
 .c-on-base-3 { color: #ccd1d6; }
 .c-on-base-2 { color: #8ba3aa; }
-.c-on-base { color: #1f5262; }
+.c-on-base { color: #14282e; }
 .c-black { color: #000; }
 .c-white { color: #fff; }
 .c-black-20 { color: rgba( 0, 0, 0, .20 ); }
@@ -714,12 +714,12 @@
 .hover-bg-base-4:hover { background-color: #e1e4e7; }
 .hover-b--base-4:focus { border-color: #e1e4e7; }
 .hover-b--base-4:hover { border-color: #e1e4e7; }
-.hover-c-base-inverted-1:focus { color: #1f5262; }
-.hover-c-base-inverted-1:hover { color: #1f5262; }
-.hover-bg-base-inverted-1:focus { background-color: #1f5262; }
-.hover-bg-base-inverted-1:hover { background-color: #1f5262; }
-.hover-b--base-inverted-1:focus { border-color: #1f5262; }
-.hover-b--base-inverted-1:hover { border-color: #1f5262; }
+.hover-c-base-inverted-1:focus { color: #14282e; }
+.hover-c-base-inverted-1:hover { color: #14282e; }
+.hover-bg-base-inverted-1:focus { background-color: #14282e; }
+.hover-bg-base-inverted-1:hover { background-color: #14282e; }
+.hover-b--base-inverted-1:focus { border-color: #14282e; }
+.hover-b--base-inverted-1:hover { border-color: #14282e; }
 .hover-c-base-inverted-2:focus { color: #7f8494; }
 .hover-c-base-inverted-2:hover { color: #7f8494; }
 .hover-bg-base-inverted-2:focus { background-color: #7f8494; }
@@ -756,12 +756,12 @@
 .hover-bg-primary-dark:hover { background-color: #2e7a92; }
 .hover-b--primary-dark:focus { border-color: #2e7a92; }
 .hover-b--primary-dark:hover { border-color: #2e7a92; }
-.hover-c-primary-bold:focus { color: #1f5262; }
-.hover-c-primary-bold:hover { color: #1f5262; }
-.hover-bg-primary-bold:focus { background-color: #1f5262; }
-.hover-bg-primary-bold:hover { background-color: #1f5262; }
-.hover-b--primary-bold:focus { border-color: #1f5262; }
-.hover-b--primary-bold:hover { border-color: #1f5262; }
+.hover-c-primary-bold:focus { color: #14282e; }
+.hover-c-primary-bold:hover { color: #14282e; }
+.hover-bg-primary-bold:focus { background-color: #14282e; }
+.hover-bg-primary-bold:hover { background-color: #14282e; }
+.hover-b--primary-bold:focus { border-color: #14282e; }
+.hover-b--primary-bold:hover { border-color: #14282e; }
 .hover-c-success-light:focus { color: #f7fcf8; }
 .hover-c-success-light:hover { color: #f7fcf8; }
 .hover-bg-success-light:focus { background-color: #f7fcf8; }
@@ -876,12 +876,12 @@
 .hover-bg-on-base-2:hover { background-color: #8ba3aa; }
 .hover-b--on-base-2:focus { border-color: #8ba3aa; }
 .hover-b--on-base-2:hover { border-color: #8ba3aa; }
-.hover-c-on-base:focus { color: #1f5262; }
-.hover-c-on-base:hover { color: #1f5262; }
-.hover-bg-on-base:focus { background-color: #1f5262; }
-.hover-bg-on-base:hover { background-color: #1f5262; }
-.hover-b--on-base:focus { border-color: #1f5262; }
-.hover-b--on-base:hover { border-color: #1f5262; }
+.hover-c-on-base:focus { color: #14282e; }
+.hover-c-on-base:hover { color: #14282e; }
+.hover-bg-on-base:focus { background-color: #14282e; }
+.hover-bg-on-base:hover { background-color: #14282e; }
+.hover-b--on-base:focus { border-color: #14282e; }
+.hover-b--on-base:hover { border-color: #14282e; }
 .hover-c-black:focus { color: #000; }
 .hover-c-black:hover { color: #000; }
 .hover-bg-black:focus { background-color: #000; }
@@ -1162,14 +1162,14 @@
 .c-base-2 { color: #f9fafc; }
 .c-base-3 { color: #edeff2; }
 .c-base-4 { color: #e1e4e7; }
-.c-base-inverted-1 { color: #1f5262; }
+.c-base-inverted-1 { color: #14282e; }
 .c-base-inverted-2 { color: #7f8494; }
 .c-base-inverted-3 { color: #a9acb7; }
 .c-base-inverted-4 { color: #f6f7f8; }
 .c-primary-light { color: #f6fcfe; }
 .c-primary { color: #3da3c3; }
 .c-primary-dark { color: #2e7a92; }
-.c-primary-bold { color: #1f5262; }
+.c-primary-bold { color: #14282e; }
 .c-success-light { color: #f7fcf8; }
 .c-success { color: #5fce77; }
 .c-success-dark { color: #479b59; }
@@ -1189,7 +1189,7 @@
 .c-on-inverted { color: #fff; }
 .c-on-base-3 { color: #ccd1d6; }
 .c-on-base-2 { color: #8ba3aa; }
-.c-on-base { color: #1f5262; }
+.c-on-base { color: #14282e; }
 .c-black { color: #000; }
 .c-white { color: #fff; }
 .c-black-20 { color: rgba( 0, 0, 0, .20 ); }
