--- a/src/_colors.css
+++ b/src/_colors.css
@@ -35,6 +35,15 @@
 --on-base: #14282E;
 --black: #000000;
 --white: #ffffff;
+--danger-light-10: rgba(254,243,245,.10);
+--danger-light-20: rgba(254,243,245,.20);
+--danger-light-30: rgba(254,243,245,.30);
+--danger-light-40: rgba(254,243,245,.40);
+--danger-light-50: rgba(254,243,245,.50);
+--danger-light-60: rgba(254,243,245,.60);
+--danger-light-70: rgba(254,243,245,.70);
+--danger-light-80: rgba(254,243,245,.80);
+--danger-light-90: rgba(254,243,245,.90);
 --black-20: rgba(0,0,0,.20);
 --black-40: rgba(0,0,0,.40);
 --black-60: rgba(0,0,0,.60);
